k8s/base/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-fe
  namespace: url-shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
        tier: web
    spec:
      containers:
        - image: localhost/url-shortener-backend:latest
          name: url-fe
      livenessProbe:
        httpGet:
          path: /health
          port: 3000
        initialDelaySeconds: 10
        periodSeconds: 10
      readinessProbe:
        httpGet:
          path: /health
          port: 3000
        initialDelaySeconds: 5
        periodSeconds: 5
