k8s/base/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: url-fe-service
  namespace: url-shortener
spec:
  selector:
    role: frontend
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
